<resources>
    <string name="app_name">Easy Arduino</string>
    <string name="title_activity_controllers" translatable="false">Controllers Activity</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu strings -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>

    <!--Alert Dialog-->
    <string name="alertdialog_title_deletepanel">Delete panel?</string>
    <string name="alertdialog_title_editpanel">Edit panel</string>
    <string name="alertdialog_title_editcontroller">Edit controller</string>
    <string name="alertdialog_message_deletepanel">Deleting a panel will delete all of its content</string>
    <string name="alertdialog_button_ok" translatable="false">OK</string>
    <string name="alertdialog_button_cancel">Cancel</string>
    <string name="alertdialog_newcontroller_title">Add new controller</string>


    <!-- About activity -->
    <string name="text_aboutactivity_title">Developers</string>
    <string name="text_aboutactivity_developers" translatable="false">Jose Luis Álvarez Quiroga\nMatías Cubillas Currás</string>
    <string name="text_aboutactivity_versiontitle" translatable="false">Version</string>

    <!-- Error and debugging Strings -->
    <string name="err_main_text">There was an error : %1$s</string>
    <string name="err_not_implemented_yet">Not implemented yet</string>
    <string name="err_nodevicefound">No device found…</string>
    <string name="err_completeallfields">Complete all fields</string>
    <string name="err_invalidcontroller">Invalid controller type</string>

    <!-- Buttons -->
    <string name="btn_startcomm_string">Start communication</string>
    <string name="btn_sendcommand_string">Send Command</string>
    <string name="btn_retry_text">Retry</string>

    <!-- New controller Alert Dialog Strings -->
    <string name="pin_type_string">Pin type</string>
    <string name="data_type_string">Data type</string>
    <string name="pin_number_string">Arduino pin number</string>
    <string name="newcontroller_nameedittext_hint">Name of the controller</string>
    <string name="newcontroller_pinnumber_hint">Pin number</string>

    <!-- New panel AlertDialog strings -->
    <string name="alertdialog_newpanel_title">Add new panel</string>
    <string name="et_newpanel_name_hint">Name of the panel</string>

    <!-- Controllers Strings -->
    <string name="controllers_loading_string">Connect Arduino now…</string>
    <string name="controllers_tv_pinnumber" translatable="false">Pin %1$d</string>

    <!-- Controllers type Strings -->
    <string name="controllertype_led" translatable="false">LED</string>
    <string name="controllertype_servo">Servo motor</string>
    <string name="controllertype_tempsensor">Temperature sensor</string>
    <string name="controllertype_humidsensor">Humidity sensor</string>
    <string name="controllertype_generalcontroller">General purpose controller</string>
    <string name="controllertype_lightsensor">Photoresistor</string>

    <!-- Shared Preferences -->
    <string name="userprefs_filename" translatable="false">es.udc.psi1718.easyarduino.userprefs</string>
    <string name="userprefs_theme" translatable="false">es.udc.psi1718.easyarduino.userprefs.theme</string>
    <string name="userprefs_startconnauto" translatable="false">es.udc.psi1718.easyarduino.userprefs.startconnauto</string>
    <string name="userprefs_icon" translatable="false">es.udc.psi1718.easyarduino.userprefs.icon</string>
    <string name="userprefs_savecontrollerstate" translatable="false">es.udc.psi1718.easyarduino.userprefs.savestate</string>

    <!-- Settings activity -->
    <string name="settings_customization_title">Customization</string>
    <string name="settings_customization_theme_dialogtitle">App Theme</string>
    <string name="settings_customization_theme_summary">Change the theme of the whole app</string>
    <string name="settings_customization_theme_title">Theme</string>
    <string name="settings_customization_icon_summary">Note: changes may take a few seconds to be visible on the launcher</string>
    <string name="settings_customization_icon_title">Use dark icon</string>
    <string name="settings_connectivity_title">Connectivity</string>
    <string name="settings_connectivity_autoconn_title">Connect automatically</string>
    <string name="settings_connectivity_autoconn_dialogtitle">Connect automatically</string>
    <string name="settings_connectivity_autoconn_summary">Start communication with Arduino as soon as the USB is attached</string>
    <string name="settings_connectivity_savecontrollerstate_title">Save controller state</string>
    <string name="settings_connectivity_savecontrollerstate_dialogtitle">Save controller state</string>
    <string name="settings_connectivity_savecontrollerstate_summary">Save the controller\'s state after closing the panel</string>

</resources>
