<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_customization_title">

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/settings_customization_theme_dialogtitle"
            android:entries="@array/userprefs_theme_entries"
            android:entryValues="@array/userprefs_theme_entryvalues"
            android:key="@string/userprefs_theme"
            android:summary="@string/settings_customization_theme_summary"
            android:title="@string/settings_customization_theme_title"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/userprefs_icon"
            android:summary="@string/settings_customization_icon_summary"
            android:title="@string/settings_customization_icon_title"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_connectivity_title">

        <CheckBoxPreference
            android:defaultValue="true"
            android:dialogTitle="@string/settings_connectivity_autoconn_dialogtitle"
            android:key="@string/userprefs_startconnauto"
            android:summary="@string/settings_connectivity_autoconn_summary"
            android:title="@string/settings_connectivity_autoconn_title"/>
    </PreferenceCategory>

</PreferenceScreen>