<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.udc.psi1718.project.view.activities.AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/about_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/tv_appname"
            style="@style/AboutActivText.appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="0dp">

                <TextView
                    style="@style/AboutActivText.titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_aboutactivity_title"/>

                <TextView
                    style="@style/AboutActivText.normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_aboutactivity_developers"/>

                <TextView
                    style="@style/AboutActivText.titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_aboutactivity_versiontitle"/>

                <TextView
                    android:id="@+id/tv_versionname"
                    style="@style/AboutActivText.normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"/>
            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</FrameLayout>
